--- a/webserver/css/global.css
+++ b/webserver/css/global.css
@@ -1,6 +1,15 @@
+
+@font-face {
+    font-family: 'Lexend';
+    src: url('../fonts/Lexend.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+
 * {
     color: #282828;
-    font-family: "Raleway", sans-serif;
+    font-family: "Arial", sans-serif;
     /* font-family: "Comfortaa", sans-serif; */
     font-weight: 500;
 }
@@ -11,39 +20,41 @@ html {
 
 :root {
     --title-height: 4vw;
-    --title-margin: 0vw;
+    --title-margin: 32px;
     --nav-item-height: 3.5vw;
-    --nav-bar-height: 0.2vw;
+    --nav-bar-height: 0.25vw;
+}
+
+nav {
+    display: flex;
+    background-color: #9a4942;
+    height: 4.2vw;
 }
 
 #title-text {
-    width: 100%;
-    text-align: center;
+    width: auto;
+    flex: 1;
     height: var(--title-height);
     line-height: calc(var(--title-height) + 0.3vw); /* countereffect the upward by this font */
-    background-color: #cd52ba;
-    
     background-repeat: no-repeat;
-    background-size: 100% auto;
     background-position-y: center;
     margin-left: var(--title-margin);
-    margin-right: var(--title-margin);
-    width: calc(100% - 2 * var(--title-margin));
     /* border-radius: 1.5vw; */
-    font-size: 2.25vw;
+    font-size: 1.3vw;
+    margin-top:0.05vw;
 }
 
 #title-text h1 {
     line-height: inherit;
     font-size: inherit;
-    font-family: "Comfortaa", sans-serif;
+    font-family: "Lexend", sans-serif;
     font-weight: 700;
-    font-family: "Playpen Sans", cursive;
+    font-family: "Lexend", cursive;
     font-weight: 500;
-    margin-top: -0.15vw;
-    color: #fff;
+    margin-top: -0.19vw;
+    color: white;
     text-align: left;
-    margin-left: 2vw;
+    margin-left: 0.5vw;
     vertical-align: top;
 }
 
@@ -59,44 +70,52 @@ html {
 }
 
 #nav {
-    padding-top: 0.5vw;
     display: flex;
-    width: 100%;
-    justify-content: center;
+    margin-right:32px;
+    justify-content: right;
     height: var(--nav-item-height);
     /* overflow: visible; */
-    margin-bottom: 2vw;
+}
+
+#nav>div{
+    margin-top:0.8vw;
+    color:yellow;
+    margin-left:0.25vw;
+    margin-right:0.25vw;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #nav a {
+    /* border-radius: 1vw;  */
+    /* transition: background-color 0.2s ease, transform 0.1s ease; */
+
+    display:flex;
     width: min-content;
     white-space: nowrap;
-    padding-left: 2vw;
-    padding-right: 2vw;
-    font-size: 1.05vw;
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+    padding-left:0.2vw;
+    padding-right:0.2vw;
+    font-size: 0.9vw !important;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     line-height: calc(var(--nav-item-height) - var(--nav-bar-height));
-    height: 100%;
-    color: #444;
+    margin-top:0.7vw;
+    height: 70%;
+    color: white;
     position: relative;
-    font-family: "Comfortaa", sans-serif;
-    font-weight: 600;
+    font-family: "Lexend", sans-serif;
+    font-weight: 350;
     /* overflow: visible; */
     /* box-sizing: content-box; */
+    
 }
 
-#nav>a:after {
-    content: ''; /* will only display when have content */
-    position: absolute;
-    bottom: 0;
-    left: 50%; /* make the position in the center */
-    width: var(--nav-hover-width, 0%);
-    background-color: #e496d9;
-    height: var(--nav-bar-height);
-    /* background-color: #eaecef; */
-    border-radius: 0.1vw;
-    transform: translateX(-50%); /* move left 50%, to make it in the middle */
-    display: block;
+#nav>a.current{
+    text-shadow:1.1px 0 0 currentColor;
 }
 
 #nav>a.current:after {
@@ -106,19 +125,30 @@ html {
     left: 50%; /* make the position in the center */
     width: 100%;
     height: var(--nav-bar-height);
-    background-color: #eea5e3;
-    border-radius: 0.1vw;
+    background-color: white;
+    /* border-radius: 0.1vw; */
     transform: translateX(-50%); /* move left 50%, to make it in the middle */
     display: block;
 }
 
 #nav>a:hover {
-    background-color: rgb(calc(255 - 255 * var(--nav-hover-bg-transparency, 0.02745098)), calc(255 - 255 * var(--nav-hover-bg-transparency, 0.02745098)), calc(255 - 255 * var(--nav-hover-bg-transparency, 0.02745098)));
+    /* color:white; */
+    /* background-color: rgb(133, 77, 72); */
 }
 
 #nav>.current {
-    color: blue;
-    background-color: #e8e8e8 !important;
+    /* color: white; */
+    /* background-color: rgb(133, 77, 72) !important; */
+}
+
+#nav a:nth-last-of-type(-n+2) {
+    /* Your styles here */
+    color: yellow;
+}
+
+#nav a:nth-last-of-type(-n+2):after {
+    /* Your styles here */
+    background-color: yellow;
 }
 
 
@@ -201,4 +231,19 @@ footer p:hover {
 
 nav * {
     box-sizing: border-box;
+}
+
+#logo {
+    width: 4.5vw;
+    display: inline-block;
+    margin-top: -0.125vw;
+    margin-right: -1vw;
+}
+
+#title-text > h1 {
+    display: inline-block;
+}
+
+#title-text {
+    text-align: left;
 }
