--- a/webserver/css/sm.css
+++ b/webserver/css/sm.css
@@ -19,6 +19,7 @@
     margin-left: 92vw;
     margin-top: -50vw;
     margin-bottom: 48vw;
+    
 }
 
 #zoom-button button {
@@ -109,3 +110,8 @@
     margin-top: -35vw;
     margin-bottom: 35vw;
 }
+
+body{
+    background-color: white;
+}
+
