--- a/webserver/css/snatac.css
+++ b/webserver/css/snatac.css
@@ -1,7 +1,6 @@
 #main-container {
     /* background-color: yellow; */
     min-height: 30vw;
-    width: 100%;
     position: relative;
 }
 
@@ -9,13 +8,7 @@
     position: absolute;
     top: 0;
     left: 2.5vw;
-}
-
-#main-container {
-    /* background-color: yellow; */
-    min-height: 30vw;
-    width: 100%;
-    position: relative;
+    accent-color: green;
 }
 
 #cell-selection {
@@ -42,6 +35,7 @@
 
 .ep .eecs {
     display: none !important;
+    
 }
 
 .eecs .ep {
@@ -67,6 +61,8 @@
 
 #whole-img-container.init #static-imgs img {
     height: 100%;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #whole-img-container.init.eecs #static-imgs img {
@@ -93,10 +89,13 @@
 
 #whole-img-container.generated.ep #static-imgs {
     /* margin-top: -3vw; */
+    
 }
 
 #whole-img-container.generated #static-imgs img {
     width: 100%;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #input-area {
@@ -115,7 +114,7 @@
 
 #gene-input {
     position: absolute;
-    left: 5vw;
+    left: 9vw;
     top: 0;
     width: 12vw;
 }
@@ -130,13 +129,13 @@
 
 #submit-button {
     position: absolute;
-    left: 20vw;
+    left: 24vw;
     top: 0;
 }
 
 #error-msg {
     position: absolute;
-    left: 29vw;
+    left: 33vw;
     top: 0;
     font-size: 1.5vw;
     line-height: var(--lib-text-single-height);
@@ -219,6 +218,7 @@
 #final-img {
     max-width: 100%;
     max-height: 100%;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #error {
@@ -285,4 +285,97 @@
     top: 39vw;
     width: 15vw;
     left: 20vw;
+}
+
+#ep-right {
+    height: 95% !important;
+}
+
+#whole-img-container.generated #all-right {
+    width: 110% !important;
+}
+
+#whole-img-container.generated #ep-right {
+    width: 90% !important;
+}
+
+
+.sub-title {
+    margin-top: 1.5vw;
+    padding-bottom: 0.5vw;
+    font-family: "Lexend", sans-serif;
+    text-align: center;
+    color: #9a4942;
+
+}
+
+.sub-description {
+    margin-top: 2vw;
+    text-align: center;
+    font-size: 1.5vw;
+    margin-left: 320px;
+    margin-right:320px;
+}
+
+.card-selection {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.5vw;
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+}
+
+.card {
+    border: 0.3vw solid #f5f5f5;
+    border-radius: 2vw;
+    padding: 1vw;
+    padding-bottom: 4vw;
+    padding-top: 4vw;
+    cursor: pointer;
+    transition: 0.3s ease;
+    width: 25vw;
+    text-align: center;
+    background-color: #9A4942;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+
+}
+
+.card > h3 {
+    font-family: "Lexend", sans-serif;
+    color: white;
+}
+
+.card > p{
+    padding-top:1.4vw;
+    font-size:1.2vw;
+    color: white;
+}
+
+.card:hover {
+    transform: translateY(-4px);
+    background-color: rgb(133, 77, 72);
+}
+
+#left-card{
+    margin-left:320px;
+    /* margin-right:4vw; */
+}
+
+#right-card{
+    /* margin-left:4vw; */
+    margin-right:320px;
+}
+
+input[type="radio"]:checked + .card {
+    border-color: #007BFF;
+    background-color: #e6f0ff;
+    box-shadow: 0 6px 12px rgba(0,123,255,0.3);
+}
+
+.hidden {
+    display: none !important;
+}
+
+body {
+    background: linear-gradient(to top, #f0e5e4, rgb(255, 255, 255));
 }
